--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+
+{"homepage": "https://atharvupadhyay08.github.io/kiwi-voice",
   "name": "kiwi-voice",
   "private": true,
   "version": "0.0.0",
@@ -7,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
