--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "homepage": "https://atharvupadhyay08.github.io/Kiwi-voice/#/",
+      "homepage": "https://atharvupadhyay08.github.io/Kiwi-voice/",
       "name": "kiwi-voice",
       "private": true,
       "version": "0.0.0",
