--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
             "react": "^19.2.0",
             "react-dom": "^19.2.0",
             "react-router-dom": "^7.9.6",
-            "react-vega": "^8.0.0",
             "vega": "^6.2.0",
+            "vega-embed": "^7.1.0",
             "vega-lite": "^6.4.1"
       },
       "devDependencies": {
